try to fix upload avatar on iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,7 +352,6 @@ body.main-page {
 	border-radius: 3px; 
 	position: relative;
 }
-.add-ava #avatarImg,
 .publication-footer #add-object{
 	width: 100%;
 	height: 100%; 
